feat: Implement transaction link collection from transaction pool
**Implementation**:
- Added Step 5 in collectCandidateLinks(): Select transactions from pool
- Use TransactionPool.selectTransactions() to get highest-fee transactions
- Calculate remaining slots: Block.MAX_BLOCK_LINKS (16) - block links count
- Add transaction links using Link.toTransaction()

**Algorithm**:
1. Collect up to 10 block links from previous epoch candidates
2. Calculate remaining slots (MAX_BLOCK_LINKS - block_links)
3. Select top N transactions from pool (ordered by fee)
4. Add transaction links to candidate block

**Benefits**:
- Mined blocks now include pending transactions
- Transactions get processed and included in blockchain
- Miners earn transaction fees
- Complete block creation workflow

**Example**:
- 10 block links + 6 transaction links = 16 total links (max)
- Transactions selected by highest fee first
- Only executed when transaction pool has pending transactions

**Before**: TODO comment, no transaction links added
**After**: Real transaction integration, up to 6 transactions per block

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>